added three pages

--- a/html/index.html
+++ b/html/index.html
@@ -8,20 +8,14 @@
        rel="stylesheet">
 </head>
 <body>
-  <a class="wrapper">
-  <h1>Игра «Найди пару»</h1>
-  <h2>Нажми на любую карту, чтобы начать</h2>
-  <div id="container" class="">
+  <div class="title-page">
+    <div class="title">
+      <h1>Игра «Найди пару»</h1>
+    </div>
+    <div class="buttons">
+      <button><a class="btns" href="../html/index2.html">Начать игру</a></button>
+      <button><a class="btns" href="../html/index3.html">Рекорды</a></button>
+    </div>
   </div>
-<div>
-    <button id="button-pause">Пауза</button><br><br>
-          Время: <span id="seconds">00</span>.<span id="tens">00</span><br>Попытки: <span id="triesid"></span>
-</div>
-</div>
-  <div>
- <a class="records" href="records.html">Рекорды и сохранение результата</a>
-      <br><br>
-  </div>
-  <script  src="../js/main.js"></script>
 </body>
 </html>
