--- a/html/index2.html
+++ b/html/index2.html
@@ -15,15 +15,20 @@
     </div>
     <div class="footer">
         <div class="pause-btn">
-            <button class="btns" id="button-pause">Пауза</button>
+
+            <div id="pause">
+                <div id="container">
+                <p>
+                    <span id="minute">00</span> : 
+                    <span id="second">00</span>&ensp;
+                    <span id="msecond">00</span>
+                </p>
+                <button id="btn1">Пауза</button>
+                </div>
+              </div>
         </div>
         <div>
-            <div>
-                Время: <span id="seconds">00</span>.<span id="tens">00</span>
-            </div>
-            <div>
                 Попытки: <span id="triesid"></span>
-            </div>
         </div>
     </div>
   <script  src="../js/main.js"></script>
